--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.13.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "next": "14.2.14",
+    "next-intl": "^3.20.0",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.13",
+    "styled-normalize": "^8.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@emotion/react": "^11.13.3",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
