--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.14",
     "next-intl": "^3.20.0",
+    "next-plugin-svgr": "^1.1.10",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
